--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,6 +9,7 @@
     <string name="panel">Panel</string>
     <string name="settings">Einstellungen</string>
     <string name="about">Info</string>
+    <string name="help">Hilfe / Handbuch</string>
     <string name="reconnect">Re-Connect</string>
     <string name="cancel">Abbrechen</string>
     <string name="disp_settings">Einstellungen anzeigen</string>
