--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,6 +9,7 @@
     <string name="panel">Panel</string>
     <string name="settings">Settings</string>
     <string name="about">Info</string>
+    <string name="help">Show Manual</string>
     <string name="reconnect">Re-Connect</string>
     <string name="cancel">Cancel</string>
     <string name="disp_settings">Display Settings</string>
